--- a/package.json
+++ b/package.json
@@ -26,44 +26,43 @@
   },
   "dependencies": {
     "fetch-check-http-status": "^2.0.0",
-    "intl": "^1.1.0",
-    "jquery": "~3.2.1",
+    "intl": "^1.2.5",
+    "jquery": "~3.4.1",
     "keymirror": "^0.1.1",
-    "leaflet": "~1.1.0",
-    "leaflet-routing-machine": "~3.2.5",
+    "leaflet": "~1.6.0",
+    "leaflet-routing-machine": "~3.2.12",
     "nominatim": "~0.1.0",
-    "radium": "^0.19.1",
-    "react": "~15.6.1",
-    "react-bootstrap": "~0.31.1",
-    "react-dom": "~15.6.1",
-    "react-intl": "^2.1.2",
-    "react-intl-redux": "0.6.0",
-    "react-linkify": "~0.2.1",
-    "react-redux": "^5.0.5",
-    "react-router": "~4.1.2",
-    "react-router-bootstrap": "~0.24.2",
-    "react-router-dom": "4.1.2",
-    "react-tooltip": "^3.3.0",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
-    "redux-watch": "^1.1.1",
-    "whatwg-fetch": "^2.0.3"
+    "radium": "^0.26.0",
+    "react": "~16.12.0",
+    "react-bootstrap": "~0.33.1",
+    "react-dom": "~16.12.0",
+    "react-intl": "^3.11.0",
+    "react-intl-redux": "2.2.0",
+    "react-linkify": "~0.2.2",
+    "react-redux": "^7.1.3",
+    "react-router": "~5.1.2",
+    "react-router-bootstrap": "~0.25.0",
+    "react-router-dom": "5.1.2",
+    "react-tooltip": "^3.11.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "redux-watch": "^1.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "~14.4.0",
-    "gulp": "~3.9.1",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "babelify": "^10.0.0",
+    "browserify": "~16.5.0",
+    "gulp": "~4.0.2",
     "gulp-html-replace": "~1.6.2",
-    "gulp-minify-html": "~1.0.5",
+    "gulp-minify-html": "~1.0.6",
     "gulp-streamify": "~1.0.2",
-    "gulp-template": "^4.0.0",
-    "gulp-uglify": "~3.0.0",
-    "gulp-util": "~3.0.7",
-    "vinyl-source-stream": "~1.1.0",
-    "watchify": "^3.9.0"
+    "gulp-template": "^5.0.0",
+    "gulp-uglify": "~3.0.2",
+    "gulp-util": "~3.0.8",
+    "vinyl-source-stream": "~2.0.0",
+    "watchify": "^3.11.1"
   }
 }
